--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.0-beta",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "@types/react-bootstrap": "^0.32.25"
+    "@types/react-bootstrap": "^0.32.25",
+    "@types/react-router-dom": "^5.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
