--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "eslintConfig": {
     "extends": [
