--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.5.3",
     "next": "^11.0.1",
+    "next-pwa": "^5.2.23",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-cookie": "^4.0.3",
