--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^11.0.1",
     "next-pwa": "^5.2.23",
     "react": "^17.0.1",
+    "react-awesome-lightbox": "^1.8.0",
     "react-bootstrap": "^1.4.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
