--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "@types/react-bootstrap": "^0.32.25"
+    "@next/eslint-plugin-next": "^11.0.1",
+    "@types/react-bootstrap": "^0.32.25",
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1"
   },
   "scripts": {
     "dev": "next dev",
@@ -32,9 +35,11 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "next"
+    ],
+    "rules": {
+      "@next/next/no-img-element": "off"
+    }
   },
   "browserslist": {
     "production": [
